kubernetes-manifests/configmaps/environment/old-environments/ukraineglitch.com/rair-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rair-ingress
  annotations:
#CREATE DEDICATED IP ADDRESS -- gcloud compute addresses create $IP-NAME --global
    kubernetes.io/ingress.global-static-ip-name: ukraineglitch-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: ssl-redirect
spec:
  rules:
#Add the host for DNS rules
  - host: ukraineglitch.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: minting-network
            port:
              number: 3001
